--- a/css/style.css
+++ b/css/style.css
@@ -221,23 +221,27 @@ Medium: 11px
     }
     
     .event-title {
-        animation: flicker 1.5s infinite alternate;
+        animation: flicker 1s infinite alternate;
         color: #fff;
     }
     
     @keyframes flicker {
         0%,
-        18%,
-        22%,
-        25%,
-        53%,
-        57%,
+        10%,
+        20%,
+        30%,
+        40%,
+        50%,
         100% {
             text-shadow: 0 0 4px #fff, 0 0 11px #fff, 0 0 19px #fff, 0 0 40px #0088f7, 0 0 80px #0088f7, 0 0 90px #0088f7, 0 0 100px #0088f7, 0 0 150px #0088f7;
         }
-        20%,
-        24%,
-        55% {
+        5%,
+        15%,
+        25%,
+        35%,
+        45%,
+        75%,
+        95% {
             text-shadow: none;
             transition: all 0.5s;
         }
